--- a/LiveStone/LSBookCollectionViewCell.xib
+++ b/LiveStone/LSBookCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,20 +12,37 @@
             <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="创" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQT-QH-fPH">
-                    <rect key="frame" x="8" y="3" width="40" height="40"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQT-QH-fPH">
+                    <rect key="frame" x="8" y="8" width="30" height="30"/>
+                    <attributedString key="attributedText">
+                        <fragment content="创">
+                            <attributes>
+                                <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <font key="NSFont" size="19" name="PingFangSC-Medium"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="世纪" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82k-lo-oLx">
-                    <rect key="frame" x="42" y="17" width="34" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="世纪" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82k-lo-oLx">
+                    <rect key="frame" x="33" y="15" width="34" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="oQT-QH-fPH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="6Gk-7q-Hzs"/>
+                <constraint firstAttribute="trailing" secondItem="oQT-QH-fPH" secondAttribute="trailing" constant="62" id="84i-6O-e2P"/>
+                <constraint firstItem="82k-lo-oLx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="F9E-S7-Cfd"/>
+                <constraint firstItem="82k-lo-oLx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="33" id="F9I-S0-Yt2"/>
+                <constraint firstItem="oQT-QH-fPH" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iY1-hw-x6U"/>
+                <constraint firstItem="oQT-QH-fPH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="qgz-Yr-tm3"/>
+                <constraint firstItem="82k-lo-oLx" firstAttribute="centerY" secondItem="oQT-QH-fPH" secondAttribute="centerY" constant="2.5" id="xO4-o1-fm4"/>
+                <constraint firstItem="82k-lo-oLx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="ynG-b7-zGw"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="246" y="240.5"/>
